# d3tools

./: CODEOWNERS  README.md  pyproject.toml
config/: __init__.py  options.py  parse.py  parse_utils.py
d3tools/config/: __init__.py  options.py  parse_utils.py
d3tools/data/: __init__.py  dataset.py  io_utils.py  memory_dataset.py  remote_dataset.py
d3tools/exit/: __init__.py
d3tools/notification/: email_notification.py
d3tools/spatial/: bounding_box.py  space_utils.py
d3tools/thumbnails/: __init__.py  colors.py  thumbnail.py  thumbnail_collection.py
d3tools/timestepping/: __init__.py
data/: __init__.py  dataset.py  io_utils.py  local_dataset.py  memory_dataset.py  remote_dataset.py  s3_dataset.py
io/: io_handler.py  local_handler.py
notification/: email_notification.py
src/d3tools/cases/: __init__.py  case.py  case_manager.py  utils.py
src/d3tools/config/: options.py  utils.py
src/d3tools/data/: __init__.py  dataset.py  io_utils.py  local_dataset.py  memory_dataset.py  remote_dataset.py
src/d3tools/errors/: __init__.py  gdal_import.py
src/d3tools/exit/: __init__.py  exit_handler.py
src/d3tools/parse/: __init__.py  parse_utils.py
src/d3tools/spatial/: __init__.py  bounding_box.py  space_utils.py
src/d3tools/thumbnails/: colors.py  thumbnail.py  thumbnail_collection.py
src/d3tools/timestepping/: __init__.py  fixed_doy_timestep.py  fixed_len_timestep.py  fixed_num_timestep.py  time_utils.py  timeperiod.py  timerange.py  timestep.py  timewindow.py
tests/config/: test_parse.py
tests/data/: test_dataset.py
tests/thumbnails/: test_colors.py
tests/timestepping/: test_fixed_doy_timestep.py  test_fixed_len_timestep.py  test_fixed_num_timestep.py  test_time_utils.py  test_timeperiod.py  test_timerange.py  test_timestep.py
thumbnails/: colors.py  thumbnail.py  thumbnail_collection.py
thumbnails/countries/: countries.dbf  countries.shp  countries.shx
timestepping/: __init__.py  fixed_doy_timestep.py  fixed_len_timestep.py  fixed_num_timestep.py  time_utils.py  timeperiod.py  timerange.py  timestep.py
