[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d3tools"
version = "2.0.0"
description = "A package of common tools for the door, dam and dryes packages of CIMA Research Foundation"
authors = [
    { name = "Luca Trotter", email = "luca.trotter@cimafoundation.org" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: ECPL License",
    "Operating System :: OS Independent",
]

# mandatory dependencies for basic functionality
dependencies = [
    "numpy>=1.21.5",
    "python_dateutil>=2.8.1",
    "rioxarray>=0.15.5",
    "xarray>=2024.3.0",
]

[project.urls]
Repository = "https://github.com/c-hydro/d3tools"

[tool.setuptools.packages]
find = { include = ["d3tools"] }

[project.optional-dependencies]
# dependencies for using csv files and shapefiles
more-data = [
    "pandas>=1.3.5",
    "geopandas>=0.14.4",
]

# dependencies for creating thumbnails
thumbnails = [
    "matplotlib>=3.5.1",
    "img2pdf>=0.5.1",
    "geopandas>=0.14.4",
    "Pillow>=9.0.1"
]

# dependencies for reading and writing remote data
remote-data = [
    "paramiko>=2.9.3",
    "boto3>=1.34.104"
]