[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d3tools"
version = "2.3.0"
description = "A package of common tools for the door, dam and dryes packages of CIMA Research Foundation"
authors = [
    { name = "Luca Trotter", email = "luca.trotter@cimafoundation.org" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: ECPL License",
    "Operating System :: OS Independent",
]

# mandatory dependencies for basic functionality
dependencies = [
    "numpy~=2.3.5",
    "python_dateutil>=2.8.1",
    "rioxarray~=0.20.0",
    "xarray~=2025.11.0",
    "setuptools>=42",
]

[project.urls]
Repository = "https://github.com/c-hydro/d3tools"

[project.optional-dependencies]
# dependencies for using csv and parquet files and shapefiles
more-data = [
    "pandas~=2.3.3",
    "geopandas~=1.1.1",
    "pyarrow~=20.0.0",
    "fastparquet~=2025.11.0",
]

# dependencies for creating thumbnails
thumbnails = [
    "matplotlib~=3.10.3",
    "img2pdf~=0.5.1",
    "geopandas~=1.1.1",
    "Pillow~=9.0.1"
]

# dependencies for reading and writing remote data
remote-data = [
    "paramiko~=4.0.0",
    "boto3~=1.42.2",
    "requests~=2.32.3"
]